<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5465C2">

            <ImageView
                android:id="@+id/toolbar_back"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_arrow_back_24"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_marginBottom="?attr/actionBarSize"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/profile_details"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="70dp"
                        android:backgroundTint="#FBECEC"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="2dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/baseline_perm_identity_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/profile_details"
                            android:textAllCaps="true"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="380dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/baseline_arrow_drop_down_24" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/orders"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#FBECEC"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="2dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/baseline_local_grocery_store_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/orders"
                            android:textAllCaps="true"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="380dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/baseline_arrow_drop_down_24" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/help"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#FBECEC"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="2dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/baseline_help_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/help_center"
                            android:textAllCaps="true"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="380dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/baseline_arrow_drop_down_24" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/currency"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#FBECEC"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="2dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/baseline_currency_exchange_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/currency"
                            android:textAllCaps="true"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="380dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/baseline_arrow_drop_down_24" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/faqs"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#FBECEC"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="2dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/baseline_question_answer_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/faqs"
                            android:textAllCaps="true"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="380dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/baseline_arrow_drop_down_24" />

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/about_us"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#FBECEC"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="2dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/baseline_group_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/about_us"
                            android:textAllCaps="true"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="380dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/baseline_arrow_drop_down_24" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/privacy_policy"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="#FBECEC"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="2dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:src="@drawable/baseline_policy_24" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/privacy_policy"
                            android:textAllCaps="true"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="380dp"
                            android:layout_marginTop="10dp"
                            android:src="@drawable/baseline_arrow_drop_down_24" />

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#F1ECEC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.997"
            app:menu="@menu/buttom_nav" />


    </androidx.constraintlayout.widget.ConstraintLayout>







</LinearLayout>